# mbsync

./: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autodefs.h  autodefs.h.in  compile_commands.json  config.status  configure  configure.ac  isync.spec  isync.spec.in  stamp-h1
src/: .#socket.c  Makefile  Makefile.am  Makefile.in  common.h  config.c  config.h  driver.c  driver.h  drv_imap.c  drv_maildir.c  drv_proxy.c  drv_proxy_gen.pl  main.c  mbsync.1  mbsyncrc.sample  mdconvert.c  run-tests.pl  socket.c  socket.h  sync.c  sync.h  util.c
src/.deps/: config.Po  driver.Po  drv_imap.Po  drv_maildir.Po  drv_proxy.Po  main.Po  mdconvert.Po  socket.Po  sync.Po  util.Po
